--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ABSA Demo</title>
+      <title>Doc2Sent: Aspect-Based Sentiment Analysis</title>
   </head>
   <body>
     <noscript>
